2010-06-13  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/InternalFunction.h: new class Rcpp::InternalFunction
	* R/Module.R: R support for Rcpp::InternalFunction

2010-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDatetimeVector.cpp: Use std::vector internally
	* inst/include/RcppDatetimeVector.h: Idem
	* src/RcppDateVector.cpp: Use std::vector internally
	* inst/include/RcppDateVector.h: Idem

2010-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDatetimeVector.cpp: Add ctor from int and setter method
	* inst/include/RcppDatetimeVector.h: Idem
	* src/RcppDateVector.cpp: Add ctor from int and setter method
	* inst/include/RcppDateVector.h: Idem

2010-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppResultSet.cpp: Proper template specialisation for wrap
	* inst/include/RcppResultSet.h: Idem

	* src/RcppDateVector.cpp: Add const qualifier to operator()(int i)
	* inst/include/RcppResultSet.h: Idem

2010-06-13  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Vector.h: added new factory functions for Vector:
	Vector::import and Vector::import_transform

2010-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDate.cpp: Simple RcppDate(SEXP) ctor added
	* inst/include/RcppDate.h: Idem

	* src/RcppResultSet.cpp: carved out four new wrap() functions by
	splitting the existing code in add() methods off

2010-06-11  Romain Francois <romain@r-enthusiasts.com>

	* R/help.R: workaround to allow the syntax "Rcpp ? something" to
	bring Rcpp documentation

	* inst/include/Rcpp/Module.h: support for exposing public data
	members

	* inst/doc/Rcpp-modules/Rcpp-modules.Rnw: a section to mention fields
	as a way to expose data members

	* inst/Rcpp/traits/is_na.h : new helper class Rcpp::traits::is_na

2010-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.2

	* debian/*: Similarly updated for new release to Debian

2010-06-08  Romain Francois <romain@r-enthusiasts.com>
